Correct alignment property in .radiogram input
Fix typo in .radiogram input styles

--- a/style.css
+++ b/style.css
@@ -116,3 +116,8 @@ input {
     flex-direction: row !important;
     align-items: center;
 }
+
+.radiogram input {
+    display: flex;
+    aling-items: center;
+}
